# Programming-4-BubbleBobble-Caspervlaer

./: CMakeLists.txt  README.md
BubbleBobble/: CMakeLists.txt  HelperFunctions.cpp  HelperFunctions.h  Main.cpp
BubbleBobble/Commands/: AddScoreCommand.cpp  AddScoreCommand.h  HighScoreInputCommand.cpp  HighScoreInputCommand.h  JumpCommand.cpp  JumpCommand.h  MoveCommand.cpp  MuteCommand.cpp  MuteCommand.h  ShootBubbleCommand.cpp  ShootBubbleCommand.h  ShootMaitaBallCommand.cpp  ShootMaitaBallCommand.h  SkipLevelCommand.cpp  SkipLevelCommand.h  StartGameCommand.cpp  StartGameCommand.h  StartMenuInputCommand.cpp  StartMenuInputCommand.h  TakeDamageCommand.cpp  TakeDamageCommand.h
BubbleBobble/Components/: AnimationComponent.cpp  AnimationComponent.h  BubbleComponent.cpp  BubbleComponent.h  BubbleStateComponent.cpp  BubbleStateComponent.h  CollisionComponent.cpp  CollisionComponent.h  EnemyDropComponent.cpp  EnemyDropComponent.h  EnemyStateComponent.cpp  EnemyStateComponent.h  FPSComponent.cpp  FPSComponent.h  FacingComponent.cpp  FacingComponent.h  HealthComponent.cpp  HealthComponent.h  HighScoreEntryComponent.cpp  HighScoreEntryComponent.h  ImGuiComponent.cpp  ImGuiComponent.h  LevelFlowComponent.cpp  LevelFlowComponent.h  MaitaBallComponent.cpp  MaitaBallComponent.h  MaitaPlayerComponent.cpp  MaitaPlayerComponent.h  MaitaStateComponent.cpp  MaitaStateComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  PlayerFacingComponent.cpp  PlayerFacingComponent.h  PlayerSlotComponent.cpp  PlayerSlotComponent.h  PlayerStateComponent.cpp  PlayerStateComponent.h  PoppedEnemyComponent.cpp  PoppedEnemyComponent.h  (+8 more)
BubbleBobble/Events/: GameEvent.h  GameEventQueue.cpp  GameEventQueue.h
BubbleBobble/Game/: BubbleBobbleGame.cpp  BubbleBobbleGame.h  GameMode.h
BubbleBobble/HelperFunctions/: CollisionRules.cpp  CollisionRules.h  FruitSpawnRegistry.cpp  FruitSpawnRegistry.h  GameObjectFactory.cpp  GameObjectFactory.h  HighScoreManager.cpp  HighScoreManager.h  LevelLoader.cpp  LevelLoader.h
BubbleBobble/Observers/: AudioObserver.cpp  AudioObserver.h  HealthObserver.cpp  HealthObserver.h  ScoreObserver.cpp  ScoreObserver.h  SteamWinObserver.cpp  SteamWinObserver.h
BubbleBobble/States/: BaseState.h  BubbleBaseState.h  BubbleDriftState.cpp  BubbleDriftState.h  BubblePopState.cpp  BubblePopState.h  BubbleShotState.cpp  BubbleShotState.h  BubbleTrappedState.cpp  BubbleTrappedState.h  EnemyAngryState.cpp  EnemyAngryState.h  EnemyBaseState.h  EnemyWalkState.cpp  EnemyWalkState.h  IdleState.cpp  IdleState.h  PlayerDeathState.cpp  PlayerDeathState.h  WalkState.cpp  WalkState.h
Data/: Levels.txt
Minigin/: AddScoreCommand.h  CMakeLists.txt  Command.h  Component.h  ControllerInput.cpp  ControllerInput.h  FPSComponent.h  GameObject.cpp  GameObject.h  GameTime.h  HealthComponent.cpp  HealthComponent.h  HealthObserver.cpp  InputManager.cpp  InputManager.h  Main.cpp  Minigin.cpp  Minigin.h  MoveCommand.cpp  MoveCommand.h  Observer.h  RenderComponent.h  Renderer.cpp  Renderer.h  RotatorComponent.cpp  RotatorComponent.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  ScoreComponent.cpp  ScoreComponent.h  ScoreObserver.cpp  ScoreObserver.h  SteamWinObserver.cpp  SteamWinObserver.h  Subject.h  TakeDamageCommand.cpp  TakeDamageCommand.h  TextComponent.h  (+5 more)
Minigin/Service/: AudioLocator.cpp  AudioLocator.h  AudioService.cpp  AudioService.h  IAudioService.h  NullAudioService.h
